compiler/testData/diagnostics/tests/typeParameters/typeParameterChainInReturnType.kt
// FIR_IDENTICAL
// ISSUE: KT-56212
fun <F> foo(): F.<!UNRESOLVED_REFERENCE!>X<!> = TODO()
